@@ -3,9 +3,13 @@ package com.gentics.mesh.changelog.changes;
 import static com.tinkerpop.blueprints.Direction.IN;
 import static com.tinkerpop.blueprints.Direction.OUT;
 
+import java.util.PriorityQueue;
+import java.util.Queue;
+
 import com.gentics.mesh.changelog.AbstractChange;
 import com.tinkerpop.blueprints.Direction;
 import com.tinkerpop.blueprints.Edge;
+import com.tinkerpop.blueprints.TransactionalGraph;
 import com.tinkerpop.blueprints.Vertex;
 
 public class RenameReleasesToBranches extends AbstractChange {
@@ -25,14 +29,42 @@ public class RenameReleasesToBranches extends AbstractChange {
 		getDb().type().addVertexType("BranchImpl", "MeshVertexImpl");
 		getDb().type().addVertexType("BranchRootImpl", "MeshVertexImpl");
 		getDb().type().addVertexType("BranchMigrationJobImpl", "MeshVertexImpl");
+
+		runBatchAction(() -> migrateVertices("ReleaseImpl", "BranchImpl"));
+		runBatchAction(() -> migrateVertices("ReleaseRootImpl", "BranchRootImpl"));
+		runBatchAction(() -> migrateVertices("ReleaseMigrationJobImpl", "BranchMigrationJobImpl"));
+
+		migrateEdgeProps("HAS_TAG");
+		migrateEdgeProps("HAS_FIELD_CONTAINER");
+		migrateEdgeProps("HAS_PARENT_NODE");
+
 	}
+
+	private void migrateEdgeProps(String label) {
+		PriorityQueue<Object> jobQueue = new PriorityQueue<>();
+		TransactionalGraph graph = getDb().rawTx();
+		setGraph(graph);
+		try {
+			int r = 0;
+			for (Edge edge : getGraph().getEdges("@class", label)) {
+				jobQueue.add(edge.getId());
+				r++;
+				if (r % 10_000 == 0) {
+					log.info("Added element to job queue " + jobQueue.size());
+				}
+			}
+		} finally {
+			graph.shutdown();
+		}
+		log.info("Created queue for " + label + " (" + jobQueue.size() + " entries)");
+		runBatchAction(() -> migrateBranchEdgeProperties(label, jobQueue));
+
+	}
+
+
 
 	@Override
 	public void applyInTx() {
-		migrateVertices("ReleaseImpl", "BranchImpl");
-		migrateVertices("ReleaseRootImpl", "BranchRootImpl");
-		migrateVertices("ReleaseMigrationJobImpl", "BranchMigrationJobImpl");
-
 		Vertex meshRoot = getMeshRootVertex();
 
 		Vertex projectRoot = meshRoot.getVertices(OUT, "HAS_PROJECT_ROOT").iterator().next();
@@ -63,44 +95,44 @@ public class RenameReleasesToBranches extends AbstractChange {
 
 		}
 
-		long n = 0;
-		for (Edge edge : getGraph().getEdges()) {
-			String label = edge.getLabel();
-			boolean update = false;
-			if (label.equals("HAS_TAG")) {
-				migrateProperty(edge, label, "releaseUuid", "branchUuid");
-				update = true;
-			}
-			if (label.equals("HAS_FIELD_CONTAINER")) {
-				migrateProperty(edge, label, "releaseUuid", "branchUuid");
-				update = true;
-			}
-			if (label.equals("HAS_PARENT_NODE")) {
-				migrateProperty(edge, label, "releaseUuid", "branchUuid");
-				update = true;
-			}
+		migrateJobProperties();
+	}
 
-			if (update) {
-				n++;
-				if (n % 1000 == 0) {
-					log.info("Migrated {" + n + "} edges");
-					getGraph().commit();
-				}
-			}
-		}
-		log.info("Migrated {" + n + "} edges");
-
-		// Migrate job properties
+	private void migrateJobProperties() {
+		Vertex meshRoot = getMeshRootVertex();
 		for (Vertex root : meshRoot.getVertices(OUT, "HAS_JOB_ROOT")) {
 			for (Vertex job : root.getVertices(OUT, "HAS_JOB")) {
 				migrateProperty(job, "releaseName", "branchName");
 				migrateProperty(job, "releaseUuid", "branchUuid");
 			}
 		}
-
 	}
 
-	private void migrateVertices(String from, String to) {
+	private boolean migrateBranchEdgeProperties(String label, Queue<Object> jobQueue) {
+		long n = 0;
+		while (!jobQueue.isEmpty()) {
+			Object id = jobQueue.poll();
+			Edge edge = getGraph().getEdge(id);
+			migrateProperty(edge, "releaseUuid", "branchUuid");
+			n++;
+			double percent = 1;
+			if (jobQueue.size() != 0) {
+				percent = (double) n / (double) jobQueue.size();
+			}
+			if (n % 8_000 == 0) {
+				log.info("Migrated {" + n + "} " + label + " edges. Remaining " + jobQueue.size() + " (" + (percent * 100) + "%)");
+				getGraph().commit();
+			}
+			if (n > 200_000) {
+				log.info("Limit for batch reached. Remaining " + jobQueue.size());
+				return true;
+			}
+		}
+		log.info("Migrated {" + n + "} " + label + " edges. Remaining " + jobQueue.size());
+		return !jobQueue.isEmpty();
+	}
+
+	private boolean migrateVertices(String from, String to) {
 		log.info("Migrating vertex type {" + from + "} to {" + to + "}");
 		Iterable<Vertex> it = getGraph().getVertices("@class", from);
 		long count = 0;
@@ -136,8 +168,16 @@ public class RenameReleasesToBranches extends AbstractChange {
 				log.info("Migrated {" + count + "} vertices.");
 				getGraph().commit();
 			}
+			if (count >= 10_000) {
+				log.info("Limit for batch reached");
+				return true;
+			}
 		}
 		log.info("Migrated total of {" + count + "} vertices from {" + from + "} to {" + to + "}");
+		if (count == 0) {
+			return false;
+		}
+		return true;
 	}
 
 	private void migrateProperty(Vertex vertex, String oldPropertyKey, String newPropertyKey) {
@@ -149,7 +189,7 @@ public class RenameReleasesToBranches extends AbstractChange {
 		}
 	}
 
-	private void migrateProperty(Edge edge, String label, String oldPropertyKey, String newPropertyKey) {
+	private void migrateProperty(Edge edge, String oldPropertyKey, String newPropertyKey) {
 		String value = edge.getProperty(oldPropertyKey);
 		edge.removeProperty(oldPropertyKey);
 		if (value != null) {
